# catchments_simulation

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  catchment_features_simulation.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: django.yaml  django.yml  python-package.yml
catchment_simulation/: catchment_features_simulation.py  example.inp  test_catchment_features_simulation.py
cs_app/: .env.example  Dockerfile  README.md  build.sh  conftest.py  docker-compose.yml  manage.py  pytest.ini  render.yaml  requirements.txt
cs_app/cs_app/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
cs_app/cs_app/templates/: base.html
cs_app/cs_app/templates/registration/: login.html
cs_app/data/: df_area.json  df_area.xlsx  df_n_impervious.json  df_n_impervious.xlsx  df_n_perv.json  df_n_perv.xlsx  df_percent_imprevious.json  df_percent_imprevious.xlsx  df_s_imperv.json  df_s_imperv.xlsx  df_s_perv.json  df_s_perv.xlsx  df_slope.json  df_slope.xlsx  df_width.json  df_width.xlsx  df_zero_imperv.json  df_zero_imperv.xlsx
cs_app/docs/source/: conf.py  cs_app_main.rst  cs_app_register.rst  index.rst
cs_app/e2e/: conftest.py  test_accessibility.py  test_auth.py  test_calculations.py  test_contact.py  test_home.py  test_navigation.py  test_profile.py  test_responsive.py  test_simulation.py  test_smoke_auth_redirect.py  test_timeseries.py  test_upload.py
cs_app/e2e/pages/: __init__.py  about_page.py  base_page.py  calculations_page.py  contact_page.py  home_page.py  login_page.py  nav_component.py  register_page.py  simulation_page.py  timeseries_page.py  upload_component.py  user_profile_page.py
cs_app/main/: admin.py  apps.py  forms.py  models.py  predictor.py  schemas.py  services.py  urls.py  views.py
cs_app/main/migrations/: 0001_initial.py
cs_app/main/static/main/css/: base.css  style.css  timeseries.css  upload_zone.css
cs_app/main/static/main/js/: base_ui.js  charts.js  upload_zone.js
cs_app/main/static/main/js/pages/: main_view.js  simulation.js  timeseries.js
cs_app/main/templates/main/: _chart_scripts.html  _upload_zone.html  _upload_zone_styles.html  about.html  calculations.html  contact.html  main_view.html  simulation.html  timeseries.html  userprofile.html
cs_app/main/tests/: test_predictions_regression.py  test_predictor_properties.py  test_schemas.py  test_startup.py  test_urls.py  test_views.py
cs_app/register/: apps.py  forms.py  urls.py  views.py
cs_app/register/templates/account/: register.html
cs_app/source/: conf.py  index.rst
cs_app/static/js/: charts.js
cs_app/swmm_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb  scaler.pkl  weights.npz
cs_app/swmm_model/variables/: variables.data-00000-of-00001  variables.index
docs/: requirements.txt
docs/source/: analysis.rst  catchment_simulation.rst  conf.py  cs_app_main.rst  cs_app_register.rst  index.rst  schemas.rst
src/catchment_simulation/: __init__.py  analysis.py  catchment_features_simulation.py  schemas.py
tests/: test_catchment_features_simulation.py  test_properties.py  test_regression_swmm.py  test_schemas.py  test_simulation_properties.py
tests/fixtures/: regression_mlp.json  regression_swmm.json
