[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catchment_simulation"
version = "0.0.7"
description = "Collection of calculation methods for simulating subcatchment features from Storm Water Management Model"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rafal Buczynski", email = "rafal.buczynski@sd.pb.edu.pl"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Hydrology",
]
keywords = ["swmm", "hydrology", "simulation", "catchment", "stormwater"]
dependencies = [
    "pandas>=1.3.5",
    "numpy>=1.21.6",
    "swmmio>=0.6.0",
    "pyswmm>=1.2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-django>=4.5",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "hypothesis>=6.60",
    "pre-commit>=3.0",
]
web = [
    "Django==3.2",
    "Werkzeug==2.0.0",
    "crispy-bootstrap4==2022.1",
    "python-dotenv==1.0.0",
    "django-crispy-forms==2.0",
    "django-import-export==3.2.0",
    "django-storages==1.13.2",
    "psycopg2-binary>=2.9.6",
    "plotly>=5.18.0",
    "dj-database-url==2.0.0",
    "whitenoise==6.4.0",
    "gunicorn==20.1.0",
    "pydantic[email]>=2.0",
]
docs = [
    "sphinx>=5.3.0",
    "sphinx_rtd_theme>=1.2.0",
    "sphinx-autobuild>=2021.3.14",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/BuczynskiRafal/catchments_simulation"
Documentation = "https://catchments-simulation.readthedocs.io"
Repository = "https://github.com/BuczynskiRafal/catchments_simulation"

[tool.setuptools.packages.find]
where = ["src"]
include = ["catchment_simulation*"]

[tool.setuptools.package-data]
catchment_simulation = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = [
    "swmmio.*",
    "pyswmm.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore:builtin type Swig.*:DeprecationWarning",
    "ignore:builtin type swigvarlink:DeprecationWarning",
]
